Fixed a few issues reported by FindBugs and PMD, CPD